[package]
name = "src-header-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.14"
clap = "3.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4.38"
ollama-rs = { version = "0.1.9", features = ["stream"] }
tokio-stream = "0.1.15"

